--- a/docs/style.css
+++ b/docs/style.css
@@ -9,6 +9,8 @@ body {
   font-feature-settings: "kern" 1;
   font-kerning: normal;
   padding: 30px;
+  display: flex;
+  flex-direction: row;
 }
 
 @media only screen and (max-width: 600px) {
@@ -186,7 +188,6 @@ h1, h2, h3 {
   /* Darker */ }
 
 .nav {
-  position: absolute;
   background: white;
   padding: 1em;
   border: 1px solid #e1e4e8;
